resources/Transitive VPC/VPC.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: AWS Cloudformation script to deploy a VPC
Parameters:
  VPCOctet:
    Description: First two octets of the VPC
    Type: String
    MinLength: '4'
    MaxLength: '7'
    AllowedPattern: "[0-9]{2,3}.[0-9]{1,3}"
    Default: 10.0
    ConstraintDescription: must only be the first two octets without a trailing period
  Region:
    Default: SYD
    Type: String
    Description: Region to deploy to.  First 3 letters of region in capitals, e.g. SYD, IRE
#  DomainName:
#    Type: String
#    Description: Domain name
#  DNSServers:
#    Default: AmazonProvidedDNS
#    Type: CommaDelimitedList
#    Description: Comma separated list of DNS server IP addresses
  VPCPeerID1:
    Description: The ID of the first VPC to peer to
    Type: String
    Default: vpc-852468e2
  PeerOwnerID1:
    Description: The AWS Account ID for the first VPC peer.
    Type: String
    Default: "059434326303"
  PX1CIDR:
    Description: The CIDR range of the Peering Connection
    Type: String
    Default: 172.20.0.0/24
  VPCPeerID2:
    Description: The ID of the second VPC to Peer to
    Type: String
    Default: vpc-ad206cca
  PeerOwnerID2:
    Description: The AWS Account ID for the first VPC peer.
    Type: String
    Default: "029509474179"
  PX2CIDR:
    Description: The CIDR range of the secdond VPC peering Connection
    Type: String
    Default: 192.168.0.0/24
#  PX1:
#    Description: The VPC Peering Connection ID
#    Type: String
#    Default: pcx-04ec0c6c
#  PX2:
#    Description: The VPC Peering Connection ID
#    Type: String
#    Default: pcx-c9f313a1
  Name:
    Description: The Name Tag to apply to all resources
    Type: String
    MinLength: '3'
    MaxLength: '255'
  Environment:
    Description: A Tag to differenciate the environment
    Type: String
    MinLength: '3'
    MaxLength: '255'
    Default: Production
    AllowedValues:
    - Production
    - Dev/Test
    - UAT
Mappings:
  SubnetConfig:
    VPC:
      CIDR: 0.0/16
    PublicA:
      CIDR: 0.0/24
    PublicB:
      CIDR: 1.0/24
    AWSInternal0:
      CIDR: 3.0/24
    AWSInternal1:
      CIDR: 4.0/24
    OnPremise0:
      CIDR: 5.0/24
    OnPremise1:
      CIDR: 6.0/24
  AvailabilityZones:
    ap-southeast-2:
      ZoneA: ap-southeast-2a
      ZoneB: ap-southeast-2b
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: VPC Configurations
      Parameters:
      - VPCOctet
      - Region
    - Label:
        default: The VPC Peering Configurations
      Parameters:
      - VPCPeerID1
      - PeerOwnerID1
      - PX1CIDR
      - VPCPeerID2
      - PeerOwnerID2
      - PX2CIDR
#    - Label:
#        default: Domain Configurations
#      Parameters:
#      - DomainName
#      - DNSServers
    - Label:
        default: Tagging Configurations
      Parameters:
      - Name
      - Environment
Resources:
  PX1:
    Type: AWS::EC2::VPCPeeringConnection
    Properties:
      PeerVpcId: !Ref VPCPeerID1
      Tags:
      - Key: Name
        Value: !Ref Name
      - Key: Environment
        Value: !Ref Environment
      VpcId: !Ref VPC
      PeerOwnerId: !Ref PeerOwnerID1
  PX2:
    Type: AWS::EC2::VPCPeeringConnection
    Properties:
      PeerVpcId: !Ref VPCPeerID2
      Tags:
      - Key: Name
        Value: !Ref Name
      - Key: Environment
        Value: !Ref Environment
      VpcId: !Ref VPC
      PeerOwnerId: !Ref PeerOwnerID2
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Fn::Join:
        - "."
        - - Ref: VPCOctet
          - Fn::FindInMap:
            - SubnetConfig
            - VPC
            - CIDR
      InstanceTenancy: default
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
      - Key: Name
        Value: !Ref Name
      - Key: Environment
        Value: !Ref Environment
  SubnetPublicA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Fn::Join:
        - "."
        - - Ref: VPCOctet
          - Fn::FindInMap:
            - SubnetConfig
            - PublicA
            - CIDR
      AvailabilityZone:
        Fn::FindInMap:
        - AvailabilityZones
        - Ref: AWS::Region
        - ZoneA
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: Public A
      - Key: Environment
        Value: !Ref Environment
  SubnetPublicB:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Fn::Join:
        - "."
        - - Ref: VPCOctet
          - Fn::FindInMap:
            - SubnetConfig
            - PublicB
            - CIDR
      AvailabilityZone:
        Fn::FindInMap:
        - AvailabilityZones
        - Ref: AWS::Region
        - ZoneB
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: Public B
      - Key: Environment
        Value: !Ref Environment
  AWSInternal0:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Fn::Join:
        - "."
        - - Ref: VPCOctet
          - Fn::FindInMap:
            - SubnetConfig
            - AWSInternal0
            - CIDR
      AvailabilityZone:
        Fn::FindInMap:
        - AvailabilityZones
        - Ref: AWS::Region
        - ZoneA
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: Web A
      - Key: Environment
        Value: !Ref Environment
  AWSInternal1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Fn::Join:
        - "."
        - - Ref: VPCOctet
          - Fn::FindInMap:
            - SubnetConfig
            - AWSInternal1
            - CIDR
      AvailabilityZone:
        Fn::FindInMap:
        - AvailabilityZones
        - Ref: AWS::Region
        - ZoneB
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: Web B
      - Key: Environment
        Value: !Ref Environment
  OnPremise0:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Fn::Join:
        - "."
        - - Ref: VPCOctet
          - Fn::FindInMap:
            - SubnetConfig
            - OnPremise0
            - CIDR
      AvailabilityZone:
        Fn::FindInMap:
        - AvailabilityZones
        - Ref: AWS::Region
        - ZoneA
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Web C
      - Key: Environment
        Value: !Ref Environment
  OnPremise1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock:
        Fn::Join:
        - "."
        - - Ref: VPCOctet
          - Fn::FindInMap:
            - SubnetConfig
            - OnPremise1
            - CIDR
      AvailabilityZone:
        Fn::FindInMap:
        - AvailabilityZones
        - Ref: AWS::Region
        - ZoneB
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: App A
      - Key: Environment
        Value: !Ref Environment
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Public
      - Key: Environment
        Value: !Ref Environment
  OnPremiseRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: OnPremise
      - Key: Environment
        Value: !Ref Environment
  AWSInternalRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: AWSInternal
      - Key: Environment
        Value: !Ref Environment
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPCIGW
  OnPremiseInternalRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref OnPremiseRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPCVPG
  AWSInternalRoutePX1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref AWSInternalRouteTable
      DestinationCidrBlock: !Ref PX1CIDR
      GatewayId: !Ref PX1
  AWSInternalRoutePX2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref AWSInternalRouteTable
      DestinationCidrBlock: !Ref PX2CIDR
      GatewayId: !Ref PX2
  FlowLogs:
    Type: AWS::EC2::FlowLog
    Properties:
      DeliverLogsPermissionArn: !Sub 'arn:aws:iam::${AWS::AccountId}:role/flowlogsRole'
      LogGroupName: FlowLogsGroup
      ResourceId:
        Ref: VPC
      ResourceType: VPC
      TrafficType: ALL
#  VPCDHCP:
#    Type: AWS::EC2::DHCPOptions
#    Properties:
#      DomainName: !Ref DomainName
#      DomainNameServers: !Ref DNSServers
#      Tags:
#      - Key: Name
#        Value: DHCP Option Set
#      - Key: Environment
#        Value: !Ref Environment
#  AssocVPCDHCPtoVPC:
#    Type: AWS::EC2::VPCDHCPOptionsAssociation
#    Properties:
#      VpcId:
#        Ref: VPC
#      DhcpOptionsId:
#        Ref: VPCDHCP
  VPCIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: IGW
      - Key: Environment
        Value: !Ref Environment
  AttachIGWtoVPC:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: VPCIGW
  VPCVPG:
    Type: AWS::EC2::VPNGateway
    Properties:
      Type: ipsec.1
      Tags:
      - Key: Name
        Value: !Ref Name
      - Key: Environment
        Value: !Ref Environment
  AttachVpnGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      VpnGatewayId:
        Ref: VPCVPG
  AssocSubnetPublicAtoPublicRouteTable:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref SubnetPublicA
  AssocSubnetPublicBtoPublicRouteTable:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Ref: SubnetPublicB
Outputs:
  VPCID:
    Value: !Ref VPC
    Description: ID of the VPC deployed
  VPCCIDR:
    Value:
      Fn::Join:
      - "."
      - - Ref: VPCOctet
        - Fn::FindInMap:
          - SubnetConfig
          - VPC
          - CIDR
    Description: CIDR of the VPC deployed
  PublicSubnetIDs:
    Value:
      Fn::Join:
      - ","
      - - Ref: SubnetPublicA
        - Ref: SubnetPublicB
    Description: Comma separated list of Public subnets
  AWSInternal:
    Value:
      Fn::Join:
      - ","
      - - Ref: AWSInternal0
        - Ref: AWSInternal1
    Description: Comma separated list of AWS Internal subnets
  OnPremise:
    Value:
      Fn::Join:
      - ","
      - - Ref: OnPremise0
        - Ref: OnPremise1
    Description: Comma separated list of On Premis subnets
  PublicRouteTable:
    Value: !Ref PublicRouteTable
    Description: The Public Route Table
  OnPremiseRouteTable:
    Value: !Ref OnPremiseRouteTable
    Description: The OnPremise Route Table
  AWSInternalRouteTable:
    Value: !Ref AWSInternalRouteTable
    Description: The AWS Internal Route Table
  VPCIGW:
    Value: !Ref VPCIGW
    Description: The ID of the VPC Internet Gateway
  VPCVPG:
    Value: !Ref VPCVPG
    Description: The ID of the VPC Virtual Private Gateway
